# Rescue

./: .gitignore  Dockerfile.jetson  Dockerfile.x86  MID360_config.json  README.md  cyclonedds_go2.xml  cyclonedds_pc.xml  deploy_go2_control.sh  docker-compose.yaml  entrypoint.sh  hybrid_pano.py  mid360_driver_only.launch.py  pano.py  pano_video.py  record_thermal.py  run_with_livox.sh
.github/workflows/: docker-image.yml
Isaac/go2_omniverse/: custom_rl_env.py  frames_2025-06-21_18.27.39.gv  main.py  maze_manager.py  maze_terrain.py  omniverse_sim.py  ros2.py  run_sim.sh  terrain_cfg.py
Isaac/go2_omniverse/Isaac_sim/Unitree/: Unitree_L1.json
Isaac/go2_omniverse/envs/: FarmNoMDL.usd  farmReal1.usd  flatter.usd
Isaac/go2_omniverse/envs/FarmReal/: FarmReal.usd  FarmRotate.usd
Isaac/go2_omniverse/envs/FarmReal/Props/: Cube.usd  Cylinder.usd  Cylinder_010.usd  InstancedFoliageActor0_RootComponent0.usd  Plane.usd  Plane_003.usd  SM_Template_Map_Floor.usd  SkySphere_Equirectangular.usd  game_ready_grass.usd  rock_game_asset_agustin_honnun.usd
Isaac/go2_omniverse/envs/Props/: Cube.usd  Cylinder.usd  Plane_003.usd  SkySphere_Equirectangular.usd
Isaac/go2_ws/: Project.btproj  objects.pgm  pose_graph.g2o
Isaac/go2_ws/src/: map.pcd  pose_graph.g2o
Isaac/go2_ws/src/go2_control/: package.xml  setup.py
Isaac/go2_ws/src/go2_control/config/: nav2_params.yaml
Isaac/go2_ws/src/go2_control/go2_control/: flatten2d.py  map2d.npy  map2d.pgm  nav2.py  permission_behavior.py  scan2d.py  slam_launch_behavior.py  walkBT.py  walk_forward.py  walk_forward_behavior.py
Isaac/go2_ws/src/go2_control/launch/: nav2_bringup.launch.py
Isaac/go2_ws/src/go2_control/maps/: map2d.npy  map2d.pgm  map2d.yaml
Isaac/go2_ws/src/go2_control_cpp/: CMakeLists.txt  navigator_plugins.xml  package.xml
Isaac/go2_ws/src/go2_control_cpp/behavior_trees/: Project.btproj  go2_models.xml  go2_subtree.xml  go2_tree.btproj  go2_tree.xml  minimal_nav_tree.xml  nav2_models.xml  poses.xml  replanner_pose.xml  walk_tree.xml
Isaac/go2_ws/src/go2_control_cpp/config/: go2.urdf  mapping.rviz  nav2_params.yaml  nav2_params_sim.yaml
Isaac/go2_ws/src/go2_control_cpp/glim_config/: config.json  config_preprocess.json  config_ros.json
Isaac/go2_ws/src/go2_control_cpp/include/go2_control_cpp/: battery_check.hpp  bt_go2.hpp  camera_controller.hpp  common_types.hpp  data_server.hpp  distance_controller.hpp  flatten_pointcloud_to_map2d_node.hpp  floor_remover.hpp  frontier_explorer.hpp  global_map2d_server.hpp  initial_alignment.hpp  initial_pose.hpp  lateral_collision_node.hpp  map2d_saver_node.hpp  nav2_ready.hpp  path_planner.hpp  permission_node.hpp  return_to_base.hpp  run_once.hpp  slam_launch_node.hpp  walk_bt_node.hpp  walk_forward_action.hpp
Isaac/go2_ws/src/go2_control_cpp/include/go2_control_navigator/: behavior_tree_navigator.hpp  go2_navigator.hpp  go2_navigator_poses.hpp
Isaac/go2_ws/src/go2_control_cpp/launch/: minimal_bt_launch.py  minimal_bt_launch_sim.py  nav2_launch.py  visualize_go2.launch.py
Isaac/go2_ws/src/go2_control_cpp/maps/: globalmap.pgm  globalmap.yaml  globalmap_blurred.pgm  initial_scan.pcd  map2d.yaml  map2dcomplete.pgm  map2dsmall.pgm  objects.pgm  submap.pgm  submap.yaml  submap_blurred.pgm  tables.json
Isaac/go2_ws/src/go2_control_cpp/src/: battery_check.cpp  bt_go2.cpp  camera_controller.cpp  camera_driver.cpp  cmdvel_to_unitree.cpp  data_server.cpp  distance_controller.cpp  flatten_node.cpp  flatten_pointcloud_to_map2d_node.cpp  floor_remover.cpp  frontier_explorer.cpp  get_recordings.cpp  global_map2d_server.cpp  go2_navigator.cpp  go2_navigator_poses.cpp  initial_alignment.cpp  initial_pose.cpp  initial_pose_node.cpp  lateral_collision_node.cpp  map2d_saver_node.cpp  nav2_ready.cpp  new_goal.cpp  path_planner.cpp  permission_node.cpp  return_to_base.cpp  ros2_sport_client.cpp  run_once.cpp  slam_launch_node.cpp  walk_bt_node.cpp  walk_forward_action.cpp
Isaac/go2_ws/src/go2_slam/: package.xml  setup.py
Isaac/go2_ws/src/go2_slam/config/: rviz2_cfg.rviz  slam.yaml
Isaac/go2_ws/src/go2_slam/launch/: slam_launch.py
Isaac/go2_ws/src/lidarslam_ros2/lidarslam/launch/: lidarslam.launch.py
Isaac/go2_ws/src/lidarslam_ros2/lidarslam/param/: lidarslam.yaml
Isaac/go2_ws/src/lidarslam_ros2/lidarslam/rviz/: mapping.rviz
Isaac/go2_ws/src/lidarslam_ros2/scanmatcher/include/scanmatcher/: scanmatcher_component.h
Isaac/go2_ws/src/lidarslam_ros2/scanmatcher/src/: scanmatcher_component.cpp
Isaac/isaac-go2-ros2/: isaac_go2_ros2.py
Isaac/isaac-go2-ros2/cfg/: sim.yaml
Isaac/isaac-go2-ros2/env/: FarmNoMDL.usd  sim_env.py
Isaac/isaac-go2-ros2/env/Props/: Cylinder_010.usd  Plane.usd  SM_Template_Map_Floor.usd
Isaac/isaac-go2-ros2/go2/: go2_env.py  go2_sensors.py
Isaac/isaac-go2-ros2/ros2/: go2_ros2_bridge.py
